src/Pages/dashboard/messageboard/messageboard.module.css
.mainFlex {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  row-gap: 20px;
}

.messageContainerMain {
  background-color: #141f33;
  box-shadow: 0 0px 15px rgba(0, 0, 0, 0.300);
  min-width: 600px;
  min-height: 120px;
  margin-bottom: 10px;
  border-radius: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 30px;
}

.messageContainer {
  background-color: #141f33;
  box-shadow: 0 0px 15px rgba(0, 0, 0, 0.300);
  min-width: 500px;
  min-height: 120px;
  margin-bottom: 20px;
  border-radius: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.messageContainerFlex {
  display: flex;
  justify-content: left;
  align-items: center;
  width: 100%;
  height: 100%;
  flex: 1;
}

.messageContainerMainFlex {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  row-gap: 10px;
  min-width: 100%;
  min-height: 100%;
  margin-left: 30px;
}

.avatar {
  height: 40px;
  width: 40px;

  border-radius: 50%;
}

.searchBar {
  margin-left: 10px;
  background-color: #192f57;
  border: 2px solid #141f33;
  border-radius: 15px;
  padding: 10px;
  color: #bbd3ff;
  transition: 0.4s;
  min-width: 520px;
  min-height: 40px;
  resize: none;
}

.messageContents {
  color: #ffffff;
  transition: 0.4s;
  min-width: 420px;
  resize: none;
  font-size: 15px;
}

.username {
  font-size: 15px;
  font-weight: bold;
}

.profileDetailsFlex {
  margin-left: 10px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.searchBar:focus {
  outline: 2px solid #bbd3ff;
}

.buttonContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
}

.buttonContainerMessage {
  display: flex;
  justify-content: left;
  align-items: center;
  width: 100%;
  margin-left: 100px;
  column-gap: 8px;
}

.searchBar:hover {
  border: 2px solid #bbd3ff;
  transition: 0.2s;
  box-shadow: 0 0px 15px #bbd3ff40;
}


.outlineButton {
  padding: 4px;
  color: #bbd3ff;
  border-radius: 15px;
  border: 2px solid #bbd3ff;
  transition: 0.4s;
  text-align: center;
  width: 60px;
  user-select: none;
  font-size: 16px;
}

.outlineButton:hover {
  color: #2d2d2d !important;
  background-color: #bbd3ff;
  border-radius: 10px;
  cursor: pointer;
  transition: 0.2s;
  box-shadow: 0 0px 15px #bbd3ff40;
}

.likeButton {
  padding: 6px;
  color: #ff4362;
  border-radius: 15px;
  border: 2px solid #ff4362;
  transition: 0.4s;
  text-align: center;
  justify-content: center;
  display: flex;
  align-items: center;
  width: 32px;
  user-select: none;
  font-size: 12px;
}

.likeButton:hover {
  color: #2d2d2d !important;
  background-color: #ff4362;
  border-radius: 10px;
  cursor: pointer;
  transition: 0.2s;
  box-shadow: 0 0px 15px #ff436240;
}

.replyButton {
  padding: 6px;
  color: #bbd3ff;
  border-radius: 15px;
  border: 2px solid #bbd3ff;
  transition: 0.4s;
  text-align: center;
  justify-content: center;
  display: flex;
  align-items: center;
  width: 32px;
  user-select: none;
  font-size: 12px;
}

.replyButton:hover {
  color: #2d2d2d !important;
  background-color: #bbd3ff;
  border-radius: 10px;
  cursor: pointer;
  transition: 0.2s;
  box-shadow: 0 0px 15px #bbd3ff40;
}

.comments {
  color:#bbd3ff;
}

.likes{
  color:#ff4362;
}

